clang/test/BSC/Negative/OwnedStruct/access/owned-struct-struct-scope-member-access.cbs
// RUN: %clang_cc1 -verify %s

_Owned struct SA {
    int a;
    _Static_assert(a, ""); // expected-error {{use of undeclared identifier 'a'}}
};
